--- a/public/add/add.html
+++ b/public/add/add.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <style>
       html,
       body {
@@ -31,6 +32,20 @@
         font-size: 20px;
       }
 
+      #container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+      }
+
+      #container button {
+        height: 100%;
+        width: 80px;
+        font-family: arial;
+        font-size: 20px;
+      }
+
       .error {
         color: red;
       }
@@ -38,34 +53,27 @@
     <title>Dodaj pokuj</title>
   </head>
   <body>
-    <h1>Podaj nazwe pokoju</h1>
-    <input type="text" placeholder="Napisz nazwe" />
+    <h1>Podaj nazwę pokoju</h1>
+    <div id="container">
+      <input type="text" placeholder="Napisz nazwe" />
+      <button>Dodaj</button>
+    </div>
 
-    <script>
-      document.querySelector("input").onchange = async (e) => {
-        const roomId = e.target.value;
+    <script type="module">
+      import { getUserId } from "../../utils/acc_client.js";
+      const uid = getUserId();
 
-        const payload = {
-          name: roomId,
-        };
+      if (uid == "" || uid == undefined) {
+        window.location.href = "../accounts/login.html";
+      }
+
+      document.querySelector("button").onclick = async (e) => {
+        const roomId = document.querySelector("input").value;
 
         // wysłanie do api żądania o stworzenie pokoju
-        const response = await fetch("http://localhost:3000/room/make", {
-          method: "POST",
-          body: JSON.stringify(payload),
-          headers: { "Content-Type": "application/json" },
-        });
-
-        const rooms = JSON.parse(localStorage.getItem("rooms"));
-
-        // jeśli użytkownik już ma jakieś pokoje to dodaj do tych pokojów
-        // jeśli nie to stwórz obiekt "rooms" i dodaj do niego pokój
-        if (rooms) {
-          rooms.push({ name: roomId });
-          localStorage.setItem("rooms", JSON.stringify(rooms));
-        } else {
-          localStorage.setItem("rooms", JSON.stringify([{ name: roomId }]));
-        }
+        await fetch(
+          `https://shoppinglist-lb7q.onrender.com/user/${uid}/room/${roomId}/add/`
+        );
 
         // przekieruj użytkownika do strony czatu
         window.location.href = "../chat/chat.html?id=" + roomId;
